language/move-lang/tests/move_check/parser/use_with_main.move
// Test various "use" declarations at the file level.
script {
use 0x0::Module;
use 0xaBcD::Module as M;
use 0x0000::Z;
fun main() {
}
}
